# SMD

./: .pre-commit-config.yaml  README.md  Text_Racecontroller_v0.9.5.0.py  Text_Racecontroller_v0.9.6.0.py  data.ui  debug.py  main.py  main.ui  pyproject.toml  widgets.py
.github/workflows/: format.yaml
communication/: __init__.py  base.py  bus.py  dummy.py
gui/: __init__.py  ctrl.py  ctrl.ui  data.py  data.ui  resources.qrc  run.ui  widgets.py
utils/: __init__.py
